--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="./css/stilos.css">
-    <link rel="stylesheet" href="../scss/main.scss">
 </head>
 
 <body>
@@ -17,16 +16,16 @@
 <nav class="casa">
     <ul>
         <h1>Master guardian</h1>
-        <li><a href="./indexx.html">Inicio</a></li>
+        
         
     </ul>
 </nav>
 <nav class="menu">
     <ul>
-        <li><a href="./tercer pre entrega/ayuda.html">Ayuda</a></li>
-        <li><a href="./tercer pre entrega/products.html">Productos</a></li>
-        <li><a href="./tercer pre entrega/Carrito.html">Carrito</a></li>
-        <li><a href="./tercer pre entrega/inicio de sesion.html">Inicio de sesion</a></li>
+        <li><a href="./page/ayuda.html">Ayuda</a></li>
+        <li><a href="./page/products.html">Productos</a></li>
+        <li><a href="./page/Carrito.html">Carrito</a></li>
+        <li><a href="./page/inicio de sesion.html">Inicio de sesion</a></li>
     </ul>
 </nav>
 
@@ -36,7 +35,7 @@
     <h2 class="titulo">Arma la computadora de tus sueños</h2>
     <p class="descripcion">Arma o elije tu propia computadora para jugar los juegos que quieras, o usarla para trabajos que necesiten mucha capacidad de procesamiento </p>
     <div class="boton">
-        <a href="./tercer pre entrega/products.html">Muestra de componente o Computadoras</a>
+        <a href="./page/products.html">Muestra de componente o Computadoras</a>
     </div>
 </main>
 
